<resources>
    <string name="app_name">AirflowSense</string>

    <!-- Login & Register Page -->
    <string name="USER_NAME_HINT">用户名（最多20个字）</string>
    <string name="PASSWORD_HINT">密码（6~12个字符）</string>
    <string name="NEW_PASSWORD_HINT">输入新密码</string>
    <string name="RE_PASSWORD_HINT">再次输入新密码</string>
    <string name="LOGIN_BUTTON">登录</string>
    <string name="REGISTER_BUTTON">注册</string>

    <!-- Main Page -->
    <string name="temperature_unit">"℃"</string>
    <string name="humidity_unit">"%"</string>
    <string name="aqi_label">"空气污染指数AQI"</string>
    <string name="large_string">"   555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        555555555555
        "</string>

    <!-- Floating Window -->
    <string name="max_head">"最大值："</string>
    <string name="min_head">"最小值："</string>
    <string name="ave_head">"平均值："</string>
</resources>
